@@ -170,7 +170,7 @@ install: all
 		clean_cpu.sh clean_os.sh \
 		clean_vendor.sh cpu.sh \
 		ld_lib_path.sh os.sh transform_paths.sh vendor.sh \
-		ld_lib_path.csh cygpath.sh ; do \
+		ld_lib_path.csh fixpath.sh ; do \
 	  $(INSTALL_PROGRAM) -m 755 $(srcdir)/$$f $(makedir); \
 	done
 	$(INSTALL_PROGRAM) -m 755 GNUstep.sh $(makedir); \
@@ -215,7 +215,7 @@ uninstall:
 		clean_cpu.sh clean_os.sh \
 		clean_vendor.sh cpu.sh ld_lib_path.sh os.sh \
 		transform_paths.sh vendor.sh \
-		ld_lib_path.csh cygpath.sh \
+		ld_lib_path.csh fixpath.sh \
 	        GNUstep.sh GNUstep.csh ; do \
 	  rm -f $(makedir)/$$f; \
 	done
