@@ -124,9 +124,14 @@ ifneq ($(FOUNDATION_LIB),nx)
 SYS_TOOLS_PATH = $(GNUSTEP_SYSTEM_ROOT)/Tools
 
 # But on windows we might need to first fix it up ...
-ifeq ($(findstring mingw, $(GNUSTEP_TARGET_OS)), mingw)
+ifeq ($(findstring mingw, $(GNUSTEP_HOST_OS)), mingw)
   ifeq ($(shell echo "$(SYS_TOOLS_PATH)" | sed 's/^\([a-zA-Z]:.*\)//'),)
-    SYS_TOOLS_PATH := $(shell cygpath -u $(SYS_TOOLS_PATH))
+    SYS_TOOLS_PATH := $(shell fixpath.sh -u $(SYS_TOOLS_PATH))
+  endif
+endif
+ifeq ($(findstring mingw, $(GNUSTEP_HOST_OS)), cygwin)
+  ifeq ($(shell echo "$(SYS_TOOLS_PATH)" | sed 's/^\([a-zA-Z]:.*\)//'),)
+    SYS_TOOLS_PATH := $(shell fixpath.sh -u $(SYS_TOOLS_PATH))
   endif
 endif
 
